# Efficient_ASR_LLM

./: .gitignore  README.md  asr_config.py  eval.py  inference.py  pyproject.toml  test_metrics.py  test_train_loop.py  train.py
configs/: ablation_small_10L_eval.yaml  ablation_small_10L_train.yaml  ablation_small_6L_eval.yaml  ablation_small_6L_train.yaml  ablation_small_8L_eval.yaml  ablation_small_8L_train.yaml  config.yaml  config_danish.yaml  eval_config.yaml  eval_config_english_100h.yaml  eval_config_v2.yaml  eval_exp_1_whisper-base_qwen2.5-3B_dan_base.yaml  eval_exp_1_whisper-small_qwen2.5-3B_dan_base.yaml  eval_exp_2_whisper-small_qwen2.5-3B_dan_lrs_ls_reg.yaml  eval_exp_3_whisper-small_qwen2.5-3B_dan_finetune.yaml  exp_1_whisper-base_qwen2.5-3B_dan_base.yaml  exp_1_whisper-small_qwen2.5-3B_dan_base.yaml  exp_2_whisper-small_qwen2.5-3B_dan_finetune.yaml  exp_2_whisper-small_qwen2.5-3B_dan_lrs_ls_reg.yaml  exp_3_whisper-small_qwen2.5-3B_dan_finetune.yaml  test_config.yaml  test_tiny.yaml  train_config.yaml  train_config_danish_best.yaml  train_config_english_100h.yaml  train_config_english_500h.yaml  train_config_english_test.yaml  train_config_whisper_small.yaml
datamodule/: data_test.py  dataset.py  download_data.py  get_dataset.py  hf_data.py  hf_fairspeech.py  hf_l2arctic.py  make_subset.py  preprocess_data.py  test_dataset.py
docs/: ARCHITECTURE_EXPLAINED.md  AUDIO_MASKING_EXPLAINED.md  SETUP_AND_TRAINING.md  SLAM_ASR_EXPLAINED.md
models/: ASRLLM.py  encoder.py  model.py  projector.py
notebooks/: data.ipynb
scripts/: audit_checkpoints.py  (+16 more)
(+641 files in other folders)
