[project]
name = "eff-asr-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "hf-xet>=1.1.9",
    "openai-whisper>=20250625",
    "peft>=0.17.1",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.55.4",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform != 'linux'" },
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
