[project]
name = "eff-asr-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blobfile>=3.1.0",
    "datasets>=4.0.0",
    "evaluate>=0.4.6",
    "hf-xet>=1.1.9",
    "huggingface-hub[cli]>=0.34.4",
    "jiwer>=4.0.0",
    "omegaconf>=2.3.0",
    "openai-whisper>=20250625",
    "peft>=0.17.1",
    "protobuf>=6.32.0",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchtnt>=0.2.4",
    "transformers>=4.55.4",
    "wandb>=0.21.3",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform != 'linux'" },
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
